# cozy-buddy-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  smart-home-design.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py
app/core/: constants.py  database.py  exceptions.py  i18n.py  logging.py  models_loader.py  registry.py  scheduler.py  security.py  tools_loader.py  websocket.py
app/domain/auth/: api.py  crud.py  models.py  schemas.py  service.py
app/domain/chat/: api.py  crud.py  models.py  schemas.py  service.py
app/domain/device/: api.py  crud.py  llm_tools.py  models.py  schemas.py  service.py  taxonomy.py
app/domain/device/adapters/: base.py  kasa.py  matter.py  tapo.py
app/domain/hub/: api.py
app/domain/llm/: api.py  factory.py  schemas.py  service.py
app/domain/llm/adapters/: base.py  gemini.py  openai.py  vllm.py
app/domain/llm/prompts/: system.py  templates.py
app/domain/llm/providers/: anthropic.py  base.py  gemini.py  llamacpp.py  openai.py  openai_compat.py  registry.py
app/domain/rag/: api.py  schemas.py  service.py
app/domain/room/: api.py
app/domain/scenario/: api.py  crud.py  llm_tools.py  models.py  scheduler.py  schemas.py  service.py
app/domain/timer/: api.py  crud.py  llm_tools.py  models.py  schemas.py  service.py
app/domain/voice/: api.py  factory.py  runtime.py  schemas.py  sentence.py  service.py  stt_service.py  tts_service.py  wake_service.py  ws.py
app/locales/: ko.json
app/middleware/: error_handler.py  request_logger.py
docs/: cozy-buddy-design-v3.md  cozy-buddy-feature-spec.md
docs/archive/: cozy-buddy-design-v2.md
docs/design/: hub-ambient.html
docs/research/: analysis-clients.md  analysis-server.md  research-android-audio.md  research-iot.md  research-llm.md  research-stt.md  research-tts.md  research-wakeword.md
scripts/: test_client.py
tests/: conftest.py  fakes.py  test_auth.py  test_chat_service.py  test_core.py  test_device_api.py  test_device_service.py  test_health.py  test_llm_factory.py  test_migrations.py  test_orchestrator.py  test_registry.py  test_scenario.py  test_sentence.py  test_taxonomy.py  test_timer_service.py  test_ws_voice.py
tests/domain/chat/: test_chat.py
tests/domain/device/: test_device.py
tests/domain/llm/: test_llm.py
tests/domain/rag/: test_rag.py
tests/domain/scenario/: test_scenario.py
(+8 files in other folders)
