[tool.poetry]
package-mode = false

[project]
name = "cozy-buddy-server"
version = "0.1.0"
description = "스마트홈 AI 비서 서버 - LLM + TTS + STT + IoT 제어"
authors = [
    {name = "cheol"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "protobuf>=4.25.0,<5.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-proto>=1.30.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
]
iot = [
    "python-kasa>=0.9.0; python_version>='3.11'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
