[project]
name = "cozy-buddy-server"
version = "0.1.0"
description = "Self-hosted smart home voice AI assistant server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "loguru>=0.7",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
# 실 음성 파이프라인 (GPU 권장) — 테스트는 fake provider로 대체 가능
voice = [
    "faster-whisper>=1.1",
    "supertonic>=1.0",
    "numpy>=2.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "websockets>=13.0",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI의 `Depends()` 기본 인자는 프레임워크 관용구
ignore = ["B008"]
